# Frontier-CS

./: README.md  SUBMIT_RESULTS.md  eval_targets.txt  pyproject.toml
.github/workflows/: sync-hf.yml  weekly-eval.yml
algorithmic/: README.md  sky-judge.yaml
algorithmic/problems/0/: config.yaml
algorithmic/problems/101/: interactor.cpp
algorithmic/problems/17/: config.yaml  interactor.cpp
algorithmic/problems/174/: config.yaml
algorithmic/problems/210/: chk.cc  config.yaml  statement.txt
algorithmic/problems/222/: config.yaml
algorithmic/problems/225/: config.yaml
algorithmic/problems/226/: chk.cc  config.yaml  statement.txt
algorithmic/problems/227/: config.yaml
algorithmic/problems/228/: config.yaml
algorithmic/problems/229/: chk.cc
algorithmic/problems/33/: checker.cpp
algorithmic/problems/35/: interactor.cpp
algorithmic/problems/43/: chk.cpp  config.yaml
algorithmic/problems/57/: interactor.cpp
algorithmic/scripts/: generate_solutions.py
algorithmic/solutions/0/: deepseekreasoner.cpp  deepseekreasoner_1.cpp  deepseekreasoner_2.cpp  deepseekreasoner_3.cpp  deepseekreasoner_4.cpp  gemini2.5pro.cpp  gemini2.5pro_1.cpp  gemini2.5pro_2.cpp  gemini2.5pro_3.cpp  gemini2.5pro_4.cpp  gemini3pro.cpp  gemini3pro_1.cpp  gemini3pro_2.cpp  gemini3pro_3.cpp  gemini3pro_4.cpp  gpt5.1.cpp  gpt5.1_1.cpp  gpt5.1_2.cpp  gpt5.1_3.cpp  gpt5.1_4.cpp  gpt5.2.cpp  gpt5.2_1.cpp  gpt5.2_2.cpp  gpt5.2_3.cpp  gpt5.2_4.cpp  gpt5.cpp  gpt5_1.cpp  gpt5_2.cpp  gpt5_3.cpp  gpt5_4.cpp  grok4fastreasoning.cpp  grok4fastreasoning_1.cpp  grok4fastreasoning_2.cpp  grok4fastreasoning_3.cpp  grok4fastreasoning_4.cpp
algorithmic/solutions/1/: deepseekreasoner.cpp  deepseekreasoner_1.cpp  deepseekreasoner_2.cpp  deepseekreasoner_3.cpp  deepseekreasoner_4.cpp  gemini2.5pro.cpp  gemini2.5pro_1.cpp  gemini2.5pro_2.cpp  gemini2.5pro_3.cpp  gemini2.5pro_4.cpp  gemini3pro.cpp  gemini3pro_1.cpp  gemini3pro_2.cpp  gemini3pro_3.cpp  gemini3pro_4.cpp  gpt5.1.cpp  gpt5.1_1.cpp  gpt5.1_2.cpp  gpt5.1_3.cpp  gpt5.1_4.cpp  gpt5.2.cpp  gpt5.2_1.cpp  gpt5.2_2.cpp  gpt5.2_3.cpp  gpt5.2_4.cpp  gpt5.cpp  gpt5_1.cpp  gpt5_2.cpp  gpt5_3.cpp  gpt5_4.cpp  grok4fastreasoning.cpp  grok4fastreasoning_1.cpp  grok4fastreasoning_2.cpp  (+2 more)
research/: CONTRIBUTING.md  README.md  check_solutions.py  generate_oneshot_gpt.py
research/mixed_gemm/: config.yaml
research/problems/cloudcast/resources/: pyproject.toml
research/problems/qknorm/resources/: pyproject.toml
research/problems/ragged_attention/resources/: pyproject.toml
research/problems/symbolic_regression/mixed_polyexp_4d/resources/: pyproject.toml
research/problems/vector_addition/2_20/resources/: pyproject.toml
research/scripts/: check_solutions.py  gen_io.py  generate_solutions.py
scripts/: export_hf_dataset.py
src/: evaluator.py
src/frontier_cs/: __init__.py  cli.py  config.py  evaluator.py  models.py
(+8477 files in other folders)
