[project]
name = "cloudcast"
version = "0.1.0"
description = "Cloud broadcast optimization simulator."
requires-python = ">=3.10"
dependencies = [
    "networkx>=3.0",
    "numpy>=1.24",
    "colorama>=0.4.6",
    "pandas>=1.5",
    "graphviz>=0.20",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
